--- a/src/styles/ps_portrait.scss
+++ b/src/styles/ps_portrait.scss
@@ -1,3 +1,9 @@
+.body_ps_portrait{
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: $main_color_1;
+}
+
 .political_compas{
     width:250px;
     height:250px;
