--- a/src/styles/ps_portrait.scss
+++ b/src/styles/ps_portrait.scss
@@ -4,6 +4,10 @@
     background-color: $main_color_1;
 }
 
+.motivational__letter{
+    margin-bottom: 100px;
+}
+
 .political_compas{
     width:250px;
     height:250px;
