added german and commentet toggling for phone

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -166,7 +166,8 @@ h3:hover {
 
   .change_language_en,
   .change_language_fr,
-  .change_language_ua {
+  .change_language_ua,
+  .change_language_de {
     font-size: 8px;
   }
 }
