add permit and year

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,7 +54,9 @@
 
     .phone_icon,
     .location_icon,
-    .email_icon {
+    .email_icon,
+    .calendar_icon,
+    .file_icon {
       height: 15px;
       width: 15px;
     }
